[CATEGORY] 재귀함수 로직 추가